# son

./: README.md  Readme  feuille de route  launcher_synth.py  package-lock.json  platformio.ini
arduino_ide/Synteensyzer/: Button.h  Looper.cpp  Looper.h  MidiHandler.cpp  MidiHandler.h  MyDsp.cpp  MyDsp.h
docs/: etapes_lancement_projet_synth_teensy.txt  generate-pptx.mjs  oral-presentation-guide.md  synteensyzer-presentation.pptx
faust/: PolyPiano.dsp  TaikoSynth.dsp
import/son/: README.md
import/son/docs/: organisation_projet_synth_teensy.txt
import/son/teensy/taiko_synth/: MyDsp.cpp  config.h  taiko_synth.ino
import/son/tools/keyboard_to_midi_cpp/: main.cpp
include/: Button.h  Looper.h  MidiHandler.h  MyDsp.h  config.h
src/: Button.cpp  Looper.cpp  MidiHandler.cpp  MyDsp.cpp  main.cpp
teensy/: main.cpp
teensy/taiko_synth/: MidiRouter.cpp  MidiRouter.h  MyDsp.cpp  MyDsp.h  taiko_synth.ino
tools/: gen_faust.ps1  gen_faust.sh
tools/keyboard_to_midi_cpp/: CMakeLists.txt  README.md  main.cpp
